# EweExporter

./: .gitignore  CMakeLists.txt  README.md
src/: Bone.h  DataManager.cpp  DataManager.h  ExportData.h  ExportDataXML.h  SkeletalAnimation.cpp  SkeletalAnimation.h  ThreadPool.h  Vertices.cpp  Vertices.h  gltfSkeleton.cpp  gltfSkeleton.h  main.cpp  main.h
